added spotify script and module

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -68,8 +68,8 @@ font-4 = "Iosevka Nerd Font Propo:size=14;3"
 
 ; MODULES SETUP
 modules-left = left1 bspwm left2
-modules-center = medium1 windowtitle medium2
-modules-right = right1 filesystem cpu memory volume date battery 
+modules-center = medium1 windowtitle spotify medium2
+modules-right = right1 filesystem cpu volume date battery 
 
 ;tray-position = center
 ;tray-padding = 2
@@ -405,14 +405,22 @@ format-disconnected-foreground = ${colors.background}
 [module/spotify]
 type = custom/script
 interval = 1
-format-prefix ="      "
+
+exec = playerctl -p spotify metadata --format "  {{ artist }} - {{ title }}" 2>/dev/null || echo ""
+
 format = <label>
 format-background = ${colors.black}
 format-foreground = ${colors.cyan}
-format-padding = 0
+format-padding = 1
 
-exec = python3 $HOME/.config/polybar/modules/spotify/spotify_status.py -t 50 -qf '{artist}: {song}'
-click-left = bspc desktop -f '^8' --follow
+label-maxlen = 50
+label-ellipsis = true
+
+click-left = playerctl -p spotifyd play-pause
+click-right = playerctl -p spotifyd next
+click-middle = playerctl -p spotifyd previous
+scroll-up = playerctl -p spotifyd next
+scroll-down = playerctl -p spotifyd previous
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 [module/memory]
 type = internal/memory
