refactor: made polybar better + fixed nvim lsp issue

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -67,9 +67,9 @@ font-4 = "Iosevka Nerd Font Propo:size=14;3"
 ; font-4 = "Togalite medium:pixelsize=11;2"
 
 ; MODULES SETUP
-modules-left = left1 bspwm left2
-modules-center = medium1 windowtitle spotify medium2
-modules-right = right1 filesystem cpu volume date battery 
+modules-left =  bspwm seperator spotify
+modules-center = windowtitle 
+modules-right =  filesystem cpu volume date battery 
 
 ;tray-position = center
 ;tray-padding = 2
@@ -101,6 +101,11 @@ content = " "
 type = custom/text
 content-foreground = ${colors.black}
 content = ""
+
+[module/seperator]
+type = custom/text
+content-foreground = ${colors.background}
+content = " "
 
 [module/right1]
 type = custom/text
@@ -362,13 +367,13 @@ adapter = ADP1
 full-at = 100
 
 format-charging = <label-charging>
-format-charging-prefix = " "
+format-charging-prefix = "  "
 format-charging-prefix-font = 2
 label-charging = "%percentage%% " 
 
 format-discharging = <label-discharging>
 label-discharging = "%percentage%% "
-format-discharging-prefix = " "
+format-discharging-prefix = "  "
 format-discharging-prefix-font = 2
 
 format-discharging-background = ${colors.aqua}
@@ -463,7 +468,7 @@ type = internal/cpu
 
 interval = 1
 format = <label>
-label = "  %percentage%% "
+label = "  %percentage%% "
 
 format-background = ${colors.black}
 format-foreground = ${colors.yellow}
